Fix for dock not showing correctly on instagram page.

--- a/contentscripts/dock.css
+++ b/contentscripts/dock.css
@@ -97,6 +97,7 @@
     overflow-x: auto;
     white-space: nowrap;
     height: 100%;
+    display: block;
 }
 
 .sailboat-dock::-webkit-scrollbar {
